        - Added MetadataService#defaultCharacterSet property.
        - Added Conneg class in the engine to support content 
          negotiation in a more maintenable way, and to support all
          dimensions (character sets, encodings, languages and media
          types). Suggested by Alexander Horn, Maxence Bernard and
          David Fogel.
     - Misc
        - Exceptions thrown in the internal HTTP client are not logged
          with a FINE level instead of a WARNING level.
        - Upgraded Simple to version 4.1.13 which now supports 
          programmatic shutdown. Contributed by Niall Gallagher.
          
- 2.0 Milestone 3 (2009-05-27)
    - Breaking changes
        - Deprecated ServletConverter and added an equivalent 
          ServletAdapter class to prevent confusion with the 
          ConverterService reintroduced in Restlet 1.2. 
        - Moved all XML, DOM, SAX and XSLT related classes from the core 
          Restlet API to a new "org.restlet.ext.xml" package. This was
          need to keep a uniform API with the new Android port.
    - Bugs fixed
        - Fixed bug with a ServerResource when an annotated method does 
          not return a value.
        - Fixed dependency issue in the org.restlet.example.pom. 
          Reported by Marcelo Ochoa.
        - ServerServlet ignores client connectors that are now available.
        - Fixed issue with annotation inheritance. 
          Contributed by Tal Liron.
        - Fixed bug causing Engine to be instantiated several time.
          Reported by David Fogel. 
        - Fixed potential issue in Engine classloading logic which used
          Class.class instead of Engine.class to get the class's 
          classloader. Reported by David Fogel.
        - Fixed conversion issues with edge cases.
        - MediaType#isCompatible() now requires the other mediatype to be
          non null.
        - Fixed issues with conditional method in ServerResource.